// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers tickerReducer should correctly getTicker 1`] = `
Object {
  "btcTicker": null,
  "crypto": "btc",
  "currency": "btc",
  "tickerLoading": true,
}
`;

exports[`reducers tickerReducer should correctly receiveTicker 1`] = `
Object {
  "btcTicker": "f",
  "crypto": "btc",
  "currency": "btc",
  "tickerLoading": false,
}
`;

exports[`reducers tickerReducer should correctly setCurrency 1`] = `
Object {
  "btcTicker": null,
  "crypto": "btc",
  "currency": "foo",
  "tickerLoading": false,
}
`;

exports[`reducers tickerReducer should handle initial state 1`] = `
Object {
  "btcTicker": null,
  "crypto": "btc",
  "currency": "btc",
  "tickerLoading": false,
}
`;
